--- a/ScannedAPI.csproj
+++ b/ScannedAPI.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="Azure.AI.FormRecognizer" Version="3.1.1" />
     <PackageReference Include="Azure.Identity" Version="1.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="RSMessageProcessor" Version="1.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
 </Project>
