update the consumer config

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   },
   "AllowedHosts": "*",
   "FormRecognizerApiKey": "b29d4af328a5487ba1d13490ac5d8a73",
-  "FormRecognizerEndpoint": "https://scannedocr.cognitiveservices.azure.com/"
+  "FormRecognizerEndpoint": "https://scannedocr.cognitiveservices.azure.com/",
+  "Kafka": {
+    "ClientConfigs": {
+      "BootstrapServers": "localhost:9092"
+    }
+  }
 }
