--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,12 @@
     "ClientConfigs": {
       "BootstrapServers": "localhost:9092"
     }
+  },
+  "Rabbit": {
+    "UserName": "guest",
+    "Password": "guest",
+    "HostName": "localhost",
+    "VHost": "/",
+    "Port": 5672
   }
 }
