--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "FormRecognizerApiKey": "",
+  "FormRecognizerEndpoint": "https://scannedocr.cognitiveservices.azure.com/",
+  "Rabbit": {
+    "Uri": ""
   }
 }
