--- a/ScannedAPI.csproj
+++ b/ScannedAPI.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.29.0" />
     <PackageReference Include="BCrypt" Version="1.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,9 +27,11 @@
     <None Remove="BCrypt" />
     <None Remove="BCrypt.Net-Next" />
     <None Remove="Repositories\Context\Interfaces\" />
+    <None Remove="AutoMapper" />
+    <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Dtos\AuthDtos\" />
+    <Folder Include="Dtos\User\" />
     <Folder Include="Models\" />
     <Folder Include="Repositories\" />
     <Folder Include="Repositories\Interfaces\" />
