--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,15 @@
   "FormRecognizerEndpoint": "https://scannedocr.cognitiveservices.azure.com/",
   "Rabbit": {
     "Uri": ""
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7168",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhost:7168",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
   }
 }
