this is just the layout and does not contain any private keys or secrets

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,27 @@
   "FormRecognizerApiKey": "",
   "FormRecognizerEndpoint": "https://scannedocr.cognitiveservices.azure.com/",
   "Rabbit": {
-    "Uri": ""
+    "UserName": "guest",
+    "Password": "guest",
+    "HostName": "localhost",
+    "VHost": "/",
+    "Port": 5672,
+    "Uri": "amqp://guest:guest@localhost:5672/"
+  },
+  "CosmosDB": {
+    "Uri": "https://scannlydb.documents.azure.com:443/",
+    "Key": "",
+    "DatabaseName": "",
+    "ContainerName": ""
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "",
+    "ValidateIssuer": true,
+    "ValidIssuer": "",
+    "ValidateAudience": true,
+    "ValidAudience": "",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
   }
 }
